@@ -1,3 +1,9 @@
+2016-06-04  Paolo Carlini  <paolo.carlini@oracle.com>
+
+	PR c++/70202
+	* g++.dg/inherit/crash5.C: New.
+	* g++.dg/inherit/virtual1.C: Adjust.
+
 2016-06-03  Jeff Law  <law@redhat.com>
 
 	PR tree-optimization/71316
